--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,15 @@ nav {
   padding: 4px;
 }
 
-.app > h1 {
+.App > a > h1 {
   text-align: center;
+  text-decoration: none;
 }
 
+.App > a {
+  text-decoration: none;
+  color: red;
+}
 /* FORM STYLIN */
 
 input[type="text"], input[type="password"], input[type="submit"] {
