--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,21 @@ nav {
 }
 /* FORM STYLIN */
 
-input[type="text"], input[type="password"], input[type="submit"] {
+input[type="text"], input[type="password"], input[type="submit"], button {
   padding: 5px;
   margin: 9px;
   background-color: rgb(233, 33, 6);
   color: white;
   border: none;
   font-size: 28px;
+}
+
+ul {
+  list-style: none;
+  width: 50%;
+  margin: 10px auto;
+}
+
+li {
+  margin: 0;
 }
