commit 7: brawl,bio,watch pages added

--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,13 @@ input[type="text"], input[type="password"], input[type="submit"], button {
   font-size: 28px;
 }
 
+.fights {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.vs {
+  font-size: 3em;
+  margin: 300px auto
+}
