--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,29 @@ input[type="text"], input[type="password"], input[type="submit"], button {
   font-size: 3em;
   margin: 300px auto
 }
+
+.bio {
+  display: flex;
+  justify-content: space-around;
+  margin: 150px auto;
+
+}
+
+img {
+  width: 1200px;
+  height: 900px;
+}
+
+.caroudash {
+  margin: 50px auto
+}
+
+.biotxt{
+  text-align: left;
+  margin: 0px 350px 0px 350px;
+}
+
+Image {
+  display: flex;
+  justify-content: space-evenly
+}
